@@ -1,6 +1,7 @@
 package com.baidu.tbadk.core.atomData;
 
 import android.content.Context;
+import com.baidu.ar.util.IoUtils;
 import com.baidu.tbadk.core.frameworkData.IntentConfig;
 import java.net.URLEncoder;
 /* loaded from: classes.dex */
@@ -23,7 +24,7 @@ public class SingleSquareActivityConfig extends IntentConfig {
         StringBuilder sb = new StringBuilder();
         sb.append(PAGE_NAME);
         try {
-            sb.append(URLEncoder.encode("|", "utf-8"));
+            sb.append(URLEncoder.encode("|", IoUtils.UTF_8));
         } catch (Exception e) {
             e.printStackTrace();
             sb.append("|");
