@@ -37,6 +37,7 @@ import com.baidu.adp.lib.util.StringUtils;
 import com.baidu.adp.lib.util.j;
 import com.baidu.adp.lib.util.l;
 import com.baidu.adp.widget.ListView.BdListView;
+import com.baidu.ar.util.IoUtils;
 import com.baidu.sapi2.passhost.pluginsdk.service.IEventCenterService;
 import com.baidu.tbadk.BaseActivity;
 import com.baidu.tbadk.TbConfig;
@@ -51,17 +52,17 @@ import com.baidu.tbadk.core.frameworkData.CmdConfigHttp;
 import com.baidu.tbadk.core.message.RequestEnterForumDataMessage;
 import com.baidu.tbadk.core.util.TiebaStatic;
 import com.baidu.tbadk.core.util.UtilHelper;
-import com.baidu.tbadk.core.util.ak;
 import com.baidu.tbadk.core.util.al;
-import com.baidu.tbadk.core.util.ax;
-import com.baidu.tbadk.core.util.x;
+import com.baidu.tbadk.core.util.am;
+import com.baidu.tbadk.core.util.ay;
+import com.baidu.tbadk.core.util.y;
 import com.baidu.tbadk.core.view.NavigationBar;
 import com.baidu.tbadk.core.view.NoDataView;
 import com.baidu.tbadk.core.view.NoDataViewFactory;
 import com.baidu.tbadk.coreExtra.view.BaseWebView;
 import com.baidu.tbadk.util.h;
-import com.baidu.tbadk.util.u;
 import com.baidu.tbadk.util.v;
+import com.baidu.tbadk.util.w;
 import com.baidu.tieba.d;
 import com.baidu.tieba.mainentrance.HotForumModel;
 import com.baidu.tieba.mainentrance.searchSuggestList.SearchListHttpResMessage;
@@ -77,63 +78,63 @@ import org.apache.http.message.BasicNameValuePair;
 @Deprecated
 /* loaded from: classes3.dex */
 public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> implements HotForumModel.a {
-    private ImageView bwq;
-    private EditText cLO;
-    private String cWR;
-    private ImageView cXb;
-    private LinearLayout eDA;
-    private BdListView eDB;
-    private com.baidu.tieba.mainentrance.a eDC;
-    private com.baidu.tieba.mainentrance.searchSuggestList.a eDD;
-    private ForumSuggestModel eDE;
-    private a eDF;
-    private String eDG;
-    private boolean eDH;
-    private ScrollView eDJ;
-    private SearchPageFocusBar eDK;
-    private View eDL;
-    private View eDM;
-    private String eDQ;
-    private HotForumModel eDc;
-    private LinearLayoutDetectsSoftKeyboard eDr;
-    private FrameLayout eDs;
-    private FrameLayout eDt;
-    private TextView eDu;
-    private BaseWebView eDv;
-    private ScrollView eDw;
-    private LinearLayout eDx;
-    private List<c> eDy;
-    private g eDz;
+    private ImageView bEt;
+    private EditText cUU;
+    private String dge;
+    private ImageView dgo;
+    private LinearLayoutDetectsSoftKeyboard eOL;
+    private FrameLayout eOM;
+    private FrameLayout eON;
+    private TextView eOO;
+    private BaseWebView eOP;
+    private ScrollView eOQ;
+    private LinearLayout eOR;
+    private List<c> eOS;
+    private g eOT;
+    private LinearLayout eOU;
+    private BdListView eOV;
+    private com.baidu.tieba.mainentrance.a eOW;
+    private com.baidu.tieba.mainentrance.searchSuggestList.a eOX;
+    private ForumSuggestModel eOY;
+    private a eOZ;
+    private HotForumModel eOw;
+    private String ePa;
+    private boolean ePb;
+    private ScrollView ePd;
+    private SearchPageFocusBar ePe;
+    private View ePf;
+    private View ePg;
+    private String ePk;
     private HotSearchInfoData mHotSearchInfo;
     private NavigationBar mNavigationBar;
     private NoDataView mNoDataView;
     private String mTopicInfoTitle;
-    private boolean eDI = true;
-    private List<View> eDN = new ArrayList();
-    private boolean eDd = false;
-    private boolean eDO = true;
-    private boolean eDP = true;
-    private Runnable eDR = new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.1
+    private boolean ePc = true;
+    private List<View> ePh = new ArrayList();
+    private boolean eOx = false;
+    private boolean ePi = true;
+    private boolean ePj = true;
+    private Runnable ePl = new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.1
         @Override // java.lang.Runnable
         public void run() {
-            SquareSearchActivity.this.cLO.requestFocus();
-            l.c(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cLO);
+            SquareSearchActivity.this.cUU.requestFocus();
+            l.c(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cUU);
         }
     };
-    private final Runnable eDS = new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.12
+    private final Runnable ePm = new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.12
         @Override // java.lang.Runnable
         public void run() {
-            if (!SquareSearchActivity.this.aMG()) {
+            if (!SquareSearchActivity.this.aRD()) {
                 try {
-                    if (SquareSearchActivity.this.cWR != null && SquareSearchActivity.this.cWR.length() > 0) {
+                    if (SquareSearchActivity.this.dge != null && SquareSearchActivity.this.dge.length() > 0) {
                         StringBuffer stringBuffer = new StringBuffer(30);
                         stringBuffer.append(TbConfig.SERVER_ADDRESS);
                         stringBuffer.append("c/f/forum/search");
-                        BasicNameValuePair basicNameValuePair = new BasicNameValuePair("query", SquareSearchActivity.this.cWR.trim());
-                        SquareSearchActivity.this.aMr();
-                        SquareSearchActivity.this.eDF = new a(stringBuffer.toString(), basicNameValuePair, true);
-                        SquareSearchActivity.this.eDF.setPriority(3);
-                        SquareSearchActivity.this.eDF.execute(stringBuffer.toString(), basicNameValuePair);
+                        BasicNameValuePair basicNameValuePair = new BasicNameValuePair("query", SquareSearchActivity.this.dge.trim());
+                        SquareSearchActivity.this.aRo();
+                        SquareSearchActivity.this.eOZ = new a(stringBuffer.toString(), basicNameValuePair, true);
+                        SquareSearchActivity.this.eOZ.setPriority(3);
+                        SquareSearchActivity.this.eOZ.execute(stringBuffer.toString(), basicNameValuePair);
                     }
                 } catch (Exception e) {
                     BdLog.e(e.getMessage());
@@ -141,16 +142,16 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
             }
         }
     };
-    private com.baidu.adp.framework.listener.a eDT = new com.baidu.adp.framework.listener.a(CmdConfigHttp.CMD_SEARCH_LIST, 309438) { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.22
+    private com.baidu.adp.framework.listener.a ePn = new com.baidu.adp.framework.listener.a(CmdConfigHttp.CMD_SEARCH_LIST, 309438) { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.22
         @Override // com.baidu.adp.framework.listener.a
         public void onMessage(ResponsedMessage<?> responsedMessage) {
             boolean z = ((responsedMessage instanceof SearchListHttpResMessage) || (responsedMessage instanceof SearchListSocketResMessage)) ? false : true;
             if (responsedMessage == null || z || responsedMessage.getError() != 0 || responsedMessage.hasError()) {
-                if (j.gP() || !SquareSearchActivity.this.eDd) {
+                if (j.jD() || !SquareSearchActivity.this.eOx) {
                     SquareSearchActivity.this.showToast(SquareSearchActivity.this.getActivity().getString(d.k.neterror));
                 }
-                if (!j.gP()) {
-                    SquareSearchActivity.this.eDd = true;
+                if (!j.jD()) {
+                    SquareSearchActivity.this.eOx = true;
                     return;
                 }
                 return;
@@ -161,30 +162,30 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
             } else if (responsedMessage instanceof SearchListSocketResMessage) {
                 list = ((SearchListSocketResMessage) responsedMessage).suggests;
             }
-            if (SquareSearchActivity.this.eDO && responsedMessage.getError() != 0) {
+            if (SquareSearchActivity.this.ePi && responsedMessage.getError() != 0) {
                 SquareSearchActivity.this.showToast(SquareSearchActivity.this.getActivity().getString(d.k.neterror));
                 return;
             }
             if (list != null && list.size() > 0) {
-                SquareSearchActivity.this.eDO = false;
+                SquareSearchActivity.this.ePi = false;
             }
-            SquareSearchActivity.this.aMD();
-            SquareSearchActivity.this.eDB.setAdapter((ListAdapter) SquareSearchActivity.this.eDD);
-            SquareSearchActivity.this.eDD.oK(SquareSearchActivity.this.cWR.trim());
-            SquareSearchActivity.this.eDD.setData(list);
-            SquareSearchActivity.this.eDD.notifyDataSetInvalidated();
+            SquareSearchActivity.this.aRA();
+            SquareSearchActivity.this.eOV.setAdapter((ListAdapter) SquareSearchActivity.this.eOX);
+            SquareSearchActivity.this.eOX.py(SquareSearchActivity.this.dge.trim());
+            SquareSearchActivity.this.eOX.setData(list);
+            SquareSearchActivity.this.eOX.notifyDataSetInvalidated();
         }
     };
-    private CustomMessageListener eDh = new CustomMessageListener(2001608) { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.23
+    private CustomMessageListener eOB = new CustomMessageListener(2001608) { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.23
         /* JADX DEBUG: Method merged with bridge method */
         @Override // com.baidu.adp.framework.listener.MessageListener
         public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
             if (customResponsedMessage != null && (customResponsedMessage.getData() instanceof String)) {
-                SquareSearchActivity.this.oN(customResponsedMessage.getData().toString());
+                SquareSearchActivity.this.pB(customResponsedMessage.getData().toString());
             }
         }
     };
-    private CustomMessageListener eDU = new CustomMessageListener(2009002) { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.13
+    private CustomMessageListener ePo = new CustomMessageListener(2009002) { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.13
         /* JADX DEBUG: Method merged with bridge method */
         @Override // com.baidu.adp.framework.listener.MessageListener
         public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
@@ -196,15 +197,15 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
             }
         }
     };
-    private View.OnClickListener eDV = new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.19
+    private View.OnClickListener ePp = new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.19
         @Override // android.view.View.OnClickListener
-        public void onClick(View view2) {
-            l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cLO);
-            if (view2.getTag() instanceof c) {
-                c cVar = (c) view2.getTag();
-                TiebaStatic.log(new al("c10363").ac("obj_name", cVar.getName()));
+        public void onClick(View view) {
+            l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cUU);
+            if (view.getTag() instanceof c) {
+                c cVar = (c) view.getTag();
+                TiebaStatic.log(new am("c10363").ah("obj_name", cVar.getName()));
                 if (!com.baidu.tbadk.plugins.b.e(SquareSearchActivity.this.getPageContext())) {
-                    SquareSearchActivity.this.sendMessage(new CustomMessage(2002001, new HotTopicActivityConfig(SquareSearchActivity.this.getPageContext().getPageActivity()).createNormalConfig(String.valueOf(cVar.getId()), cVar.getName(), "")));
+                    SquareSearchActivity.this.sendMessage(new CustomMessage(2002001, new HotTopicActivityConfig(SquareSearchActivity.this.getPageContext().getPageActivity()).createNormalConfig(String.valueOf(cVar.getId()), cVar.getName(), "4")));
                 }
             }
         }
@@ -215,24 +216,24 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
             if (customResponsedMessage != null && customResponsedMessage.getCmd() == 2921023 && (customResponsedMessage.getData() instanceof String)) {
                 String str = (String) customResponsedMessage.getData();
-                if (SquareSearchActivity.this.eDv.getUrl() != null && SquareSearchActivity.this.eDv.getUrl().contains(str)) {
-                    SquareSearchActivity.this.hideLoadingView(SquareSearchActivity.this.eDs);
+                if (SquareSearchActivity.this.eOP.getUrl() != null && SquareSearchActivity.this.eOP.getUrl().contains(str)) {
+                    SquareSearchActivity.this.hideLoadingView(SquareSearchActivity.this.eOM);
                 }
             }
         }
     };
 
     /* JADX INFO: Access modifiers changed from: private */
-    public boolean aMq() {
+    public boolean aRn() {
         if (this.mHotSearchInfo == null) {
             return false;
         }
-        if (this.mHotSearchInfo.aMo() == 0) {
+        if (this.mHotSearchInfo.aRl() == 0) {
             H(this.mHotSearchInfo.getName(), false);
-        } else if (this.mHotSearchInfo.aMo() == 1 && !com.baidu.tbadk.plugins.b.e(getPageContext())) {
-            sendMessage(new CustomMessage(2002001, new HotTopicActivityConfig(getPageContext().getPageActivity()).createNormalConfig(String.valueOf(this.mHotSearchInfo.getId()), this.mHotSearchInfo.getName(), "")));
+        } else if (this.mHotSearchInfo.aRl() == 1 && !com.baidu.tbadk.plugins.b.e(getPageContext())) {
+            sendMessage(new CustomMessage(2002001, new HotTopicActivityConfig(getPageContext().getPageActivity()).createNormalConfig(String.valueOf(this.mHotSearchInfo.getId()), this.mHotSearchInfo.getName(), "4")));
         }
-        TiebaStatic.log(new al("c10355").ac("obj_name", this.mHotSearchInfo.getName()).r("obj_type", this.mHotSearchInfo.aMo() == 0 ? 2 : 1));
+        TiebaStatic.log(new am("c10355").ah("obj_name", this.mHotSearchInfo.getName()).r("obj_type", this.mHotSearchInfo.aRl() == 0 ? 2 : 1));
         return true;
     }
 
@@ -243,15 +244,15 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         setContentView(d.i.home_dialog_search);
         init();
         getWindow().setSoftInputMode(1);
-        registerListener(this.eDU);
-        registerListener(this.eDT);
-        registerListener(this.eDh);
+        registerListener(this.ePo);
+        registerListener(this.ePn);
+        registerListener(this.eOB);
         registerListener(this.htmlLoadMessageListener);
         if (SquareSearchActivityConfig.IS_SHOW_RECOMMEND_FORUM) {
-            this.eDc = new HotForumModel(getPageContext(), this);
-            this.eDc.aMm();
+            this.eOw = new HotForumModel(getPageContext(), this);
+            this.eOw.aRj();
         }
-        this.eDH = false;
+        this.ePb = false;
     }
 
     /* JADX INFO: Access modifiers changed from: protected */
@@ -264,35 +265,35 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
     @Override // com.baidu.tbadk.BaseActivity, com.baidu.adp.base.BdBaseActivity, android.app.Activity
     public void onDestroy() {
         super.onDestroy();
-        hideLoadingView(this.eDs);
-        this.mHandler.removeCallbacks(this.eDR);
-        aMr();
+        hideLoadingView(this.eOM);
+        this.mHandler.removeCallbacks(this.ePl);
+        aRo();
     }
 
-    public void aMr() {
-        this.mHandler.removeCallbacks(this.eDS);
-        if (this.eDF != null) {
-            this.eDF.cancel();
-            this.eDF = null;
+    public void aRo() {
+        this.mHandler.removeCallbacks(this.ePm);
+        if (this.eOZ != null) {
+            this.eOZ.cancel();
+            this.eOZ = null;
         }
     }
 
     private void init() {
-        this.eDr = (LinearLayoutDetectsSoftKeyboard) findViewById(d.g.parent);
-        this.eDr.setOnSoftKeyBoardShownListener(new LinearLayoutDetectsSoftKeyboard.a() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.24
+        this.eOL = (LinearLayoutDetectsSoftKeyboard) findViewById(d.g.parent);
+        this.eOL.setOnSoftKeyBoardShownListener(new LinearLayoutDetectsSoftKeyboard.a() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.24
             @Override // com.baidu.tieba.view.LinearLayoutDetectsSoftKeyboard.a
-            public void ih(boolean z) {
-                SquareSearchActivity.this.eDI = z;
+            public void in(boolean z) {
+                SquareSearchActivity.this.ePc = z;
             }
         });
-        this.eDr.setOnTouchListener(new View.OnTouchListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.25
+        this.eOL.setOnTouchListener(new View.OnTouchListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.25
             @Override // android.view.View.OnTouchListener
-            public boolean onTouch(View view2, MotionEvent motionEvent) {
+            public boolean onTouch(View view, MotionEvent motionEvent) {
                 if (motionEvent.getAction() == 0) {
-                    SquareSearchActivity.this.eDr.setFocusable(true);
-                    SquareSearchActivity.this.eDr.setFocusableInTouchMode(true);
-                    if (SquareSearchActivity.this.cLO.hasFocus()) {
-                        l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cLO);
+                    SquareSearchActivity.this.eOL.setFocusable(true);
+                    SquareSearchActivity.this.eOL.setFocusableInTouchMode(true);
+                    if (SquareSearchActivity.this.cUU.hasFocus()) {
+                        l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cUU);
                         return false;
                     }
                     return false;
@@ -300,33 +301,33 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
                 return false;
             }
         });
-        ard();
-        this.eDs = (FrameLayout) findViewById(d.g.frame_layout);
+        avi();
+        this.eOM = (FrameLayout) findViewById(d.g.frame_layout);
         this.mNoDataView = NoDataViewFactory.a(getPageContext().getPageActivity(), null, NoDataViewFactory.c.a(NoDataViewFactory.ImgType.NODATA, (int) getResources().getDimension(d.e.ds200)), null, null);
         if (SquareSearchActivityConfig.IS_SHOW_LIKE_FORUM) {
-            this.eDJ = (ScrollView) LayoutInflater.from(getPageContext().getPageActivity()).inflate(d.i.home_searchbar_nodataview, (ViewGroup) null);
-            LinearLayout linearLayout = (LinearLayout) this.eDJ.findViewById(d.g.focusbar_nodata_root);
-            this.eDK = (SearchPageFocusBar) linearLayout.findViewById(d.g.no_data_focusbar);
+            this.ePd = (ScrollView) LayoutInflater.from(getPageContext().getPageActivity()).inflate(d.i.home_searchbar_nodataview, (ViewGroup) null);
+            LinearLayout linearLayout = (LinearLayout) this.ePd.findViewById(d.g.focusbar_nodata_root);
+            this.ePe = (SearchPageFocusBar) linearLayout.findViewById(d.g.no_data_focusbar);
             linearLayout.addView(this.mNoDataView, 0);
-            this.eDJ.setOnTouchListener(new View.OnTouchListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.26
+            this.ePd.setOnTouchListener(new View.OnTouchListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.26
                 @Override // android.view.View.OnTouchListener
-                public boolean onTouch(View view2, MotionEvent motionEvent) {
-                    l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.eDJ);
+                public boolean onTouch(View view, MotionEvent motionEvent) {
+                    l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.ePd);
                     return false;
                 }
             });
-            this.eDs.addView(this.eDJ, this.eDs.getChildCount());
+            this.eOM.addView(this.ePd, this.eOM.getChildCount());
         } else {
-            this.eDs.addView(this.mNoDataView, 0);
+            this.eOM.addView(this.mNoDataView, 0);
         }
-        this.eDt = (FrameLayout) findViewById(d.g.home_search_list);
-        aMp();
-        aMt();
-        aMu();
-        aMv();
-        this.eDv = (BaseWebView) findViewById(d.g.search_result_webview);
-        this.eDv.initCommonJsBridge(getPageContext().getPageActivity());
-        this.eDv.setOnPageFinishedListener(new BaseWebView.c() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.27
+        this.eON = (FrameLayout) findViewById(d.g.home_search_list);
+        aRm();
+        aRq();
+        aRr();
+        aRs();
+        this.eOP = (BaseWebView) findViewById(d.g.search_result_webview);
+        this.eOP.initCommonJsBridge(getPageContext().getPageActivity());
+        this.eOP.setOnPageFinishedListener(new BaseWebView.c() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.27
             @Override // com.baidu.tbadk.coreExtra.view.BaseWebView.c
             public void onPageFinished(WebView webView, String str) {
                 if (SquareSearchActivity.this.isProgressBarShown()) {
@@ -334,13 +335,13 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
                 }
             }
         });
-        this.eDv.setOnReceivedErrorListener(new BaseWebView.f() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.28
+        this.eOP.setOnReceivedErrorListener(new BaseWebView.f() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.28
             @Override // com.baidu.tbadk.coreExtra.view.BaseWebView.f
             public void onReceivedError(WebView webView, int i, String str, String str2) {
                 com.baidu.tbadk.core.d.a.a("search", -1L, 0, "ReceivedError", 0, "", "requesturl", str2, "receiveerror", Integer.valueOf(i), "description", str);
             }
         });
-        this.eDv.setOnReceivedSslErrorListener(new BaseWebView.g() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.2
+        this.eOP.setOnReceivedSslErrorListener(new BaseWebView.g() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.2
             @Override // com.baidu.tbadk.coreExtra.view.BaseWebView.g
             public void onReceivedSslError(WebView webView, SslErrorHandler sslErrorHandler, SslError sslError) {
                 if (sslError != null) {
@@ -348,50 +349,50 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
                 }
             }
         });
-        this.eDv.setOnLoadUrlListener(new BaseWebView.b() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.3
+        this.eOP.setOnLoadUrlListener(new BaseWebView.b() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.3
             /* JADX DEBUG: Multi-variable search result rejected for r3v0, resolved type: com.baidu.tieba.mainentrance.SquareSearchActivity */
             /* JADX WARN: Multi-variable type inference failed */
             @Override // com.baidu.tbadk.coreExtra.view.BaseWebView.b
             public boolean shouldOverrideUrlLoading(WebView webView, String str) {
-                return ax.wf().b(SquareSearchActivity.this.getPageContext(), new String[]{str}) != 3;
+                return ay.zG().b(SquareSearchActivity.this.getPageContext(), new String[]{str}) != 3;
             }
         });
-        this.cLO.setText("");
-        this.cLO.requestFocus();
-        ShowSoftKeyPadDelay(this.cLO, 200);
-        aMw();
-        aMx();
+        this.cUU.setText("");
+        this.cUU.requestFocus();
+        ShowSoftKeyPadDelay(this.cUU, 200);
+        aRt();
+        aRu();
     }
 
-    private void ard() {
+    private void avi() {
         this.mNavigationBar = (NavigationBar) findViewById(d.g.view_navigation_bar);
         View addCustomView = this.mNavigationBar.addCustomView(NavigationBar.ControlAlign.HORIZONTAL_CENTER, d.i.square_search_navigation_view, (View.OnClickListener) null);
-        this.bwq = (ImageView) addCustomView.findViewById(d.g.search_bar_icon);
-        this.cLO = (EditText) addCustomView.findViewById(d.g.home_et_search);
-        this.cXb = (ImageView) addCustomView.findViewById(d.g.home_bt_search_del);
-        this.eDu = (TextView) addCustomView.findViewById(d.g.home_bt_search_cancel_s);
-        this.cLO.setOnFocusChangeListener(new View.OnFocusChangeListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.4
+        this.bEt = (ImageView) addCustomView.findViewById(d.g.search_bar_icon);
+        this.cUU = (EditText) addCustomView.findViewById(d.g.home_et_search);
+        this.dgo = (ImageView) addCustomView.findViewById(d.g.home_bt_search_del);
+        this.eOO = (TextView) addCustomView.findViewById(d.g.home_bt_search_cancel_s);
+        this.cUU.setOnFocusChangeListener(new View.OnFocusChangeListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.4
             @Override // android.view.View.OnFocusChangeListener
-            public void onFocusChange(View view2, boolean z) {
+            public void onFocusChange(View view, boolean z) {
                 if (z) {
-                    SquareSearchActivity.this.aMs();
+                    SquareSearchActivity.this.aRp();
                 } else {
-                    l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), view2);
+                    l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), view);
                 }
             }
         });
-        this.cLO.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.5
+        this.cUU.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.5
             @Override // android.view.View.OnClickListener
-            public void onClick(View view2) {
-                SquareSearchActivity.this.aMs();
+            public void onClick(View view) {
+                SquareSearchActivity.this.aRp();
             }
         });
-        this.eDu.setText(getPageContext().getString(d.k.cancel));
-        this.eDu.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.6
+        this.eOO.setText(getPageContext().getString(d.k.cancel));
+        this.eOO.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.6
             @Override // android.view.View.OnClickListener
-            public void onClick(View view2) {
-                l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cLO);
-                com.baidu.adp.lib.g.e.fw().postDelayed(new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.6.1
+            public void onClick(View view) {
+                l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cUU);
+                com.baidu.adp.lib.g.e.im().postDelayed(new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.6.1
                     @Override // java.lang.Runnable
                     public void run() {
                         SquareSearchActivity.this.finish();
@@ -399,19 +400,19 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
                 }, 200L);
             }
         });
-        this.cLO.setOnEditorActionListener(new TextView.OnEditorActionListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.7
+        this.cUU.setOnEditorActionListener(new TextView.OnEditorActionListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.7
             @Override // android.widget.TextView.OnEditorActionListener
             public boolean onEditorAction(TextView textView, int i, KeyEvent keyEvent) {
                 if (i == 3) {
-                    if (SquareSearchActivity.this.cWR == null || SquareSearchActivity.this.cWR.trim().length() < 1) {
-                        l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cLO);
-                        if (SquareSearchActivity.this.aMq()) {
+                    if (SquareSearchActivity.this.dge == null || SquareSearchActivity.this.dge.trim().length() < 1) {
+                        l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cUU);
+                        if (SquareSearchActivity.this.aRn()) {
                             return true;
                         }
                         SquareSearchActivity.this.showToast(SquareSearchActivity.this.getResources().getString(d.k.write_keyword));
                         return true;
                     }
-                    String trim = SquareSearchActivity.this.cLO.getText().toString().trim();
+                    String trim = SquareSearchActivity.this.cUU.getText().toString().trim();
                     if (!StringUtils.isNull(trim)) {
                         SquareSearchActivity.this.H(trim, false);
                         return true;
@@ -422,13 +423,13 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
                 return false;
             }
         });
-        this.cXb.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.8
+        this.dgo.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.8
             @Override // android.view.View.OnClickListener
-            public void onClick(View view2) {
-                SquareSearchActivity.this.cLO.setText("");
+            public void onClick(View view) {
+                SquareSearchActivity.this.cUU.setText("");
             }
         });
-        this.cLO.addTextChangedListener(new TextWatcher() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.9
+        this.cUU.addTextChangedListener(new TextWatcher() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.9
             @Override // android.text.TextWatcher
             public void onTextChanged(CharSequence charSequence, int i, int i2, int i3) {
             }
@@ -439,59 +440,59 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
 
             @Override // android.text.TextWatcher
             public void afterTextChanged(Editable editable) {
-                if (SquareSearchActivity.this.eDP) {
-                    SquareSearchActivity.this.cWR = editable.toString();
-                    if (StringUtils.isNull(SquareSearchActivity.this.cWR)) {
-                        SquareSearchActivity.this.eDO = true;
+                if (SquareSearchActivity.this.ePj) {
+                    SquareSearchActivity.this.dge = editable.toString();
+                    if (StringUtils.isNull(SquareSearchActivity.this.dge)) {
+                        SquareSearchActivity.this.ePi = true;
                     }
-                    SquareSearchActivity.this.aMA();
+                    SquareSearchActivity.this.aRx();
                 }
                 if (editable.toString().trim().length() == 0) {
-                    SquareSearchActivity.this.cXb.setVisibility(8);
+                    SquareSearchActivity.this.dgo.setVisibility(8);
                 } else {
-                    SquareSearchActivity.this.cXb.setVisibility(0);
+                    SquareSearchActivity.this.dgo.setVisibility(0);
                 }
-                ak.c(SquareSearchActivity.this.eDu, d.C0126d.cp_link_tip_a, 1);
+                al.c(SquareSearchActivity.this.eOO, d.C0141d.cp_link_tip_a, 1);
             }
         });
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aMs() {
-        if (StringUtils.isNull(this.cLO.getText().toString())) {
-            if (this.eDw.getVisibility() != 0) {
-                aMy();
+    public void aRp() {
+        if (StringUtils.isNull(this.cUU.getText().toString())) {
+            if (this.eOQ.getVisibility() != 0) {
+                aRv();
             }
-        } else if (this.eDB.getVisibility() != 0) {
-            aMA();
+        } else if (this.eOV.getVisibility() != 0) {
+            aRx();
         }
     }
 
-    private void aMt() {
-        this.eDw = (ScrollView) findViewById(d.g.search_history_scrollview);
-        this.eDx = (LinearLayout) findViewById(d.g.search_history_linearlayout);
-        if (this.eDA == null) {
-            this.eDA = new LinearLayout(getPageContext().getPageActivity());
-            this.eDA.setOrientation(1);
-            this.eDA.setBackgroundColor(ak.getColor(d.C0126d.cp_bg_line_d));
+    private void aRq() {
+        this.eOQ = (ScrollView) findViewById(d.g.search_history_scrollview);
+        this.eOR = (LinearLayout) findViewById(d.g.search_history_linearlayout);
+        if (this.eOU == null) {
+            this.eOU = new LinearLayout(getPageContext().getPageActivity());
+            this.eOU.setOrientation(1);
+            this.eOU.setBackgroundColor(al.getColor(d.C0141d.cp_bg_line_d));
         }
-        this.eDx.addView(this.eDA);
+        this.eOR.addView(this.eOU);
     }
 
-    private void aMu() {
-        if (this.eDz == null) {
-            this.eDz = new g(getPageContext());
-            this.eDx.addView(this.eDz.kz());
+    private void aRr() {
+        if (this.eOT == null) {
+            this.eOT = new g(getPageContext());
+            this.eOR.addView(this.eOT.nn());
         }
     }
 
-    private void aMv() {
-        this.eDB = (BdListView) findViewById(d.g.home_lv_search_suggest);
-        this.eDC = new com.baidu.tieba.mainentrance.a(this, null);
-        this.eDD = new com.baidu.tieba.mainentrance.searchSuggestList.a(getPageContext().getPageActivity(), null);
-        this.eDB.setOnItemClickListener(new AdapterView.OnItemClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.10
+    private void aRs() {
+        this.eOV = (BdListView) findViewById(d.g.home_lv_search_suggest);
+        this.eOW = new com.baidu.tieba.mainentrance.a(this, null);
+        this.eOX = new com.baidu.tieba.mainentrance.searchSuggestList.a(getPageContext().getPageActivity(), null);
+        this.eOV.setOnItemClickListener(new AdapterView.OnItemClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.10
             @Override // android.widget.AdapterView.OnItemClickListener
-            public void onItemClick(AdapterView<?> adapterView, View view2, int i, long j) {
+            public void onItemClick(AdapterView<?> adapterView, View view, int i, long j) {
                 ListAdapter adapter;
                 ListView listView = (ListView) adapterView;
                 if (listView != null && (adapter = listView.getAdapter()) != null && adapter.getCount() != 0 && i < adapter.getCount()) {
@@ -503,7 +504,7 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
                 }
             }
         });
-        this.eDB.setOnScrollListener(new AbsListView.OnScrollListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.11
+        this.eOV.setOnScrollListener(new AbsListView.OnScrollListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.11
             @Override // android.widget.AbsListView.OnScrollListener
             public void onScrollStateChanged(AbsListView absListView, int i) {
                 if (i == 2 || i == 1) {
@@ -517,103 +518,103 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         });
     }
 
-    public void aMw() {
-        this.eDu.setText(getPageContext().getString(d.k.cancel));
-        aMx();
-        aMr();
-        aMB();
-        if (this.cWR.trim().length() > 0) {
-            aMA();
+    public void aRt() {
+        this.eOO.setText(getPageContext().getString(d.k.cancel));
+        aRu();
+        aRo();
+        aRy();
+        if (this.dge.trim().length() > 0) {
+            aRx();
         } else {
-            aMy();
+            aRv();
         }
     }
 
-    private void aMx() {
+    private void aRu() {
         if (this.mHotSearchInfo == null) {
-            this.cLO.setHint(d.k.search_bar);
+            this.cUU.setHint(d.k.search_bar);
         } else {
-            this.cLO.setHint(" " + UtilHelper.getFixedText(this.mHotSearchInfo.akw(), 15));
+            this.cUU.setHint(" " + UtilHelper.getFixedText(this.mHotSearchInfo.aoC(), 15));
         }
     }
 
-    private void aMp() {
+    private void aRm() {
         HotSearchInfoData hotSearchInfoData = (HotSearchInfoData) OrmObject.objectWithJsonStr(com.baidu.tbadk.core.sharedPref.b.getInstance().getString("hot_search_info", ""), HotSearchInfoData.class);
         if (hotSearchInfoData != null && hotSearchInfoData.getId() != 0) {
             this.mHotSearchInfo = hotSearchInfoData;
         }
     }
 
-    private void aMy() {
-        this.eDv.setVisibility(8);
-        this.eDB.setVisibility(8);
+    private void aRv() {
+        this.eOP.setVisibility(8);
+        this.eOV.setVisibility(8);
         MessageManager.getInstance().sendMessage(new CustomMessage(2009002));
         if (SquareSearchActivityConfig.IS_SHOW_LIKE_FORUM) {
-            ig(true);
-            aP(this.eDK);
-            aP(this.eDJ);
+            im(true);
+            aS(this.ePe);
+            aS(this.ePd);
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
     public void Z(ArrayList<String> arrayList) {
-        NoDataViewFactory.d dp;
+        NoDataViewFactory.d dr;
         if (ab(arrayList)) {
-            aMF();
-            if (j.gP()) {
-                dp = NoDataViewFactory.d.dp(d.k.text_no_search_record);
+            aRC();
+            if (j.jD()) {
+                dr = NoDataViewFactory.d.dr(d.k.text_no_search_record);
             } else {
-                dp = NoDataViewFactory.d.dp(d.k.neterror);
+                dr = NoDataViewFactory.d.dr(d.k.neterror);
             }
-            this.mNoDataView.setTextOption(dp);
+            this.mNoDataView.setTextOption(dr);
             return;
         }
-        aME();
+        aRB();
         aa(arrayList);
         D(true, arrayList == null || arrayList.size() == 0);
-        aMx();
+        aRu();
     }
 
     private void aa(final ArrayList<String> arrayList) {
-        if (this.eDA != null) {
-            this.eDA.removeAllViews();
+        if (this.eOU != null) {
+            this.eOU.removeAllViews();
             if (arrayList != null && !arrayList.isEmpty() && getActivity() != null) {
                 Activity pageActivity = getPageContext().getPageActivity();
                 LinearLayout.LayoutParams layoutParams = new LinearLayout.LayoutParams(-1, -2);
-                this.eDL = LayoutInflater.from(pageActivity).inflate(d.i.square_search_recommand_fourm_header, (ViewGroup) null);
-                this.eDL.findViewById(d.g.titleTopDivider).setVisibility(8);
-                getLayoutMode().u(this.eDL);
-                this.eDA.addView(this.eDL, layoutParams);
+                this.ePf = LayoutInflater.from(pageActivity).inflate(d.i.square_search_recommand_fourm_header, (ViewGroup) null);
+                this.ePf.findViewById(d.g.titleTopDivider).setVisibility(8);
+                getLayoutMode().onModeChanged(this.ePf);
+                this.eOU.addView(this.ePf, layoutParams);
                 int size = arrayList.size();
-                this.eDN.clear();
+                this.ePh.clear();
                 for (int i = 0; i < size; i++) {
                     final String str = arrayList.get(i);
                     if (!TextUtils.isEmpty(str)) {
                         final View inflate = LayoutInflater.from(pageActivity).inflate(d.i.home_dialog_search_item, (ViewGroup) null);
                         ((TextView) inflate.findViewById(d.g.home_lv_search_forum)).setText(str);
-                        ak.c((TextView) inflate.findViewById(d.g.home_lv_search_forum), d.C0126d.cp_cont_b, 1);
+                        al.c((TextView) inflate.findViewById(d.g.home_lv_search_forum), d.C0141d.cp_cont_b, 1);
                         inflate.findViewById(d.g.home_dialog_lv_search_forum_divider).setVisibility(8);
-                        ak.i(inflate, d.f.square_search_item_bg);
+                        al.i(inflate, d.f.square_search_item_bg);
                         LinearLayout.LayoutParams layoutParams2 = new LinearLayout.LayoutParams(-1, -2);
                         inflate.setOnClickListener(new b(str));
                         ImageView imageView = (ImageView) inflate.findViewById(d.g.del_search_history_btn);
-                        ak.c(imageView, d.f.icn_shop_order_close);
+                        al.c(imageView, d.f.icn_shop_order_close);
                         imageView.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.14
                             @Override // android.view.View.OnClickListener
-                            public void onClick(View view2) {
-                                v.a(new u<Boolean>() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.14.1
+                            public void onClick(View view) {
+                                w.a(new v<Boolean>() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.14.1
                                     /* JADX DEBUG: Method merged with bridge method */
                                     /* JADX WARN: Can't rename method to resolve collision */
-                                    @Override // com.baidu.tbadk.util.u
+                                    @Override // com.baidu.tbadk.util.v
                                     public Boolean doInBackground() {
-                                        com.baidu.tieba.tbadkCore.util.a.tc(str);
+                                        com.baidu.tieba.tbadkCore.util.a.tW(str);
                                         return true;
                                     }
                                 }, new h<Boolean>() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.14.2
                                     /* JADX DEBUG: Method merged with bridge method */
                                     @Override // com.baidu.tbadk.util.h
                                     public void onReturnDataInUI(Boolean bool) {
-                                        SquareSearchActivity.this.eDA.removeView(inflate);
+                                        SquareSearchActivity.this.eOU.removeView(inflate);
                                         arrayList.remove(str);
                                         if (arrayList.size() <= 0) {
                                             SquareSearchActivity.this.Z(null);
@@ -622,79 +623,79 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
                                 });
                             }
                         });
-                        this.eDN.add(inflate);
-                        this.eDA.addView(inflate, layoutParams2);
+                        this.ePh.add(inflate);
+                        this.eOU.addView(inflate, layoutParams2);
                     }
                 }
-                this.eDM = LayoutInflater.from(pageActivity).inflate(d.i.home_dialog_search_footer, (ViewGroup) null);
-                ((TextView) this.eDM.findViewById(d.g.home_bt_search_footer)).setTextColor(ak.getColor(d.C0126d.cp_link_tip_a));
+                this.ePg = LayoutInflater.from(pageActivity).inflate(d.i.home_dialog_search_footer, (ViewGroup) null);
+                ((TextView) this.ePg.findViewById(d.g.home_bt_search_footer)).setTextColor(al.getColor(d.C0141d.cp_link_tip_a));
                 LinearLayout.LayoutParams layoutParams3 = new LinearLayout.LayoutParams(-1, -2);
-                this.eDM.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.15
+                this.ePg.setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.15
                     @Override // android.view.View.OnClickListener
-                    public void onClick(View view2) {
-                        SquareSearchActivity.this.aMz();
+                    public void onClick(View view) {
+                        SquareSearchActivity.this.aRw();
                     }
                 });
-                this.eDA.addView(this.eDM, layoutParams3);
+                this.eOU.addView(this.ePg, layoutParams3);
             }
         }
     }
 
     private void D(boolean z, boolean z2) {
-        if (this.eDz != null) {
-            this.eDz.clear();
-            if (this.eDy != null && !this.eDy.isEmpty() && z) {
-                this.eDz.m18if(!z2);
-                this.eDz.setTitleText(this.mTopicInfoTitle);
-                int size = this.eDy.size();
+        if (this.eOT != null) {
+            this.eOT.clear();
+            if (this.eOS != null && !this.eOS.isEmpty() && z) {
+                this.eOT.il(!z2);
+                this.eOT.setTitleText(this.mTopicInfoTitle);
+                int size = this.eOS.size();
                 if (size >= 1) {
                     if (size > 7) {
                         size = 7;
                     }
                     int i = size % 2 == 0 ? size - 1 : size;
                     for (int i2 = 0; i2 < i; i2++) {
-                        c cVar = (c) com.baidu.tbadk.core.util.v.c(this.eDy, i2);
+                        c cVar = (c) com.baidu.tbadk.core.util.w.c(this.eOS, i2);
                         if (cVar != null) {
-                            this.eDz.a(cVar, i2).setOnClickListener(this.eDV);
+                            this.eOT.a(cVar, i2).setOnClickListener(this.ePp);
                         }
                     }
-                    this.eDz.a(null, i).setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.16
+                    this.eOT.a(null, i).setOnClickListener(new View.OnClickListener() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.16
                         @Override // android.view.View.OnClickListener
-                        public void onClick(View view2) {
-                            l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cLO);
+                        public void onClick(View view) {
+                            l.b(SquareSearchActivity.this.getPageContext().getPageActivity(), SquareSearchActivity.this.cUU);
                             if (!com.baidu.tbadk.plugins.b.e(SquareSearchActivity.this.getPageContext())) {
-                                MessageManager.getInstance().sendMessage(new CustomMessage(2002001, new HotRanklistActivityConfig(view2.getContext()).createNormalConfig("hotforum", "all")));
+                                MessageManager.getInstance().sendMessage(new CustomMessage(2002001, new HotRanklistActivityConfig(view.getContext()).createNormalConfig("hotforum", "all")));
                             }
                         }
                     });
-                    this.eDz.show();
+                    this.eOT.show();
                 }
             }
         }
     }
 
     private boolean ab(ArrayList<String> arrayList) {
-        return (arrayList == null || arrayList.isEmpty()) && (this.eDy == null || this.eDy.size() <= 2) && this.eDH;
+        return (arrayList == null || arrayList.isEmpty()) && (this.eOS == null || this.eOS.size() <= 2) && this.ePb;
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aMz() {
-        new com.baidu.tbadk.core.dialog.a(getPageContext().getPageActivity()).dc(getPageContext().getString(d.k.alert_clean_history)).a(getPageContext().getString(d.k.clear_all_text), new a.b() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.18
+    public void aRw() {
+        new com.baidu.tbadk.core.dialog.a(getPageContext().getPageActivity()).dB(getPageContext().getString(d.k.alert_clean_history)).a(getPageContext().getString(d.k.clear_all_text), new a.b() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.18
             @Override // com.baidu.tbadk.core.dialog.a.b
             public void onClick(com.baidu.tbadk.core.dialog.a aVar) {
                 aVar.dismiss();
-                com.baidu.adp.lib.g.h.fx().d(new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.18.1
+                com.baidu.adp.lib.g.h.in().d(new Runnable() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.18.1
                     @Override // java.lang.Runnable
                     public void run() {
-                        com.baidu.tieba.tbadkCore.util.a.bsN();
+                        com.baidu.tieba.tbadkCore.util.a.bxS();
                     }
                 });
-                if (SquareSearchActivity.this.eDy == null || SquareSearchActivity.this.eDy.size() < 2) {
-                    SquareSearchActivity.this.aO(SquareSearchActivity.this.eDJ);
-                    SquareSearchActivity.this.aO(SquareSearchActivity.this.eDK);
-                    SquareSearchActivity.this.eDt.setVisibility(8);
+                if (SquareSearchActivity.this.eOS == null || SquareSearchActivity.this.eOS.size() < 2) {
+                    SquareSearchActivity.this.aR(SquareSearchActivity.this.ePd);
+                    SquareSearchActivity.this.aR(SquareSearchActivity.this.ePe);
+                    SquareSearchActivity.this.eON.setVisibility(8);
                     SquareSearchActivity.this.mNoDataView.setVisibility(0);
-                    SquareSearchActivity.this.mNoDataView.setTextOption(NoDataViewFactory.d.dp(d.k.text_no_search_record));
+                    SquareSearchActivity.this.mNoDataView.setTextOption(NoDataViewFactory.d.dr(d.k.text_no_search_record));
                     return;
                 }
                 SquareSearchActivity.this.Z(null);
@@ -704,29 +705,29 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
             public void onClick(com.baidu.tbadk.core.dialog.a aVar) {
                 aVar.dismiss();
             }
-        }).b(getPageContext()).tC();
+        }).b(getPageContext()).xa();
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aMA() {
-        if (this.cWR.trim().length() > 0) {
-            aMC();
+    public void aRx() {
+        if (this.dge.trim().length() > 0) {
+            aRz();
             return;
         }
-        aMr();
-        aMy();
+        aRo();
+        aRv();
     }
 
-    private void aMB() {
-        if (this.eDB != null) {
-            this.eDB.setNextPage(null);
+    private void aRy() {
+        if (this.eOV != null) {
+            this.eOV.setNextPage(null);
         }
     }
 
-    private void aMC() {
-        if (!StringUtils.isNull(this.cWR)) {
+    private void aRz() {
+        if (!StringUtils.isNull(this.dge)) {
             SearchListNetMessage searchListNetMessage = new SearchListNetMessage();
-            searchListNetMessage.mKey = this.cWR.trim();
+            searchListNetMessage.mKey = this.dge.trim();
             sendMessage(searchListNetMessage);
         }
     }
@@ -734,15 +735,15 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
     /* JADX INFO: Access modifiers changed from: private */
     public void refresh() {
         try {
-            if (this.eDE != null) {
-                if (this.eDE.forum_list != null && this.eDE.forum_list.size() > 0) {
-                    aMD();
-                    this.eDB.setAdapter((ListAdapter) this.eDC);
-                    this.eDC.oK(this.cWR);
-                    this.eDC.Y(this.eDE.forum_list);
-                    this.eDC.notifyDataSetInvalidated();
+            if (this.eOY != null) {
+                if (this.eOY.forum_list != null && this.eOY.forum_list.size() > 0) {
+                    aRA();
+                    this.eOV.setAdapter((ListAdapter) this.eOW);
+                    this.eOW.py(this.dge);
+                    this.eOW.Y(this.eOY.forum_list);
+                    this.eOW.notifyDataSetInvalidated();
                 } else {
-                    aP(this.eDJ);
+                    aS(this.ePd);
                 }
             }
         } catch (Exception e) {
@@ -751,49 +752,49 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aMD() {
-        this.eDt.setVisibility(0);
-        this.eDB.setVisibility(0);
-        this.eDw.setVisibility(8);
-        this.eDv.setVisibility(8);
-        aP(this.eDJ);
+    public void aRA() {
+        this.eON.setVisibility(0);
+        this.eOV.setVisibility(0);
+        this.eOQ.setVisibility(8);
+        this.eOP.setVisibility(8);
+        aS(this.ePd);
         this.mNoDataView.setVisibility(8);
     }
 
-    private void aME() {
-        this.eDt.setVisibility(0);
-        this.eDw.setVisibility(0);
-        this.eDB.setVisibility(8);
-        this.eDv.setVisibility(8);
-        aP(this.eDJ);
+    private void aRB() {
+        this.eON.setVisibility(0);
+        this.eOQ.setVisibility(0);
+        this.eOV.setVisibility(8);
+        this.eOP.setVisibility(8);
+        aS(this.ePd);
         this.mNoDataView.setVisibility(8);
     }
 
-    private void aMF() {
-        this.eDt.setVisibility(8);
-        this.eDB.setVisibility(8);
-        this.eDw.setVisibility(8);
-        this.eDv.setVisibility(8);
-        aO(this.eDJ);
+    private void aRC() {
+        this.eON.setVisibility(8);
+        this.eOV.setVisibility(8);
+        this.eOQ.setVisibility(8);
+        this.eOP.setVisibility(8);
+        aR(this.ePd);
         this.mNoDataView.setVisibility(0);
-        aO(this.eDK);
+        aR(this.ePe);
     }
 
     @Override // com.baidu.tieba.mainentrance.HotForumModel.a
-    public void oL(String str) {
-        this.eDH = true;
-        this.eDy = new ArrayList();
-        aMy();
+    public void pz(String str) {
+        this.ePb = true;
+        this.eOS = new ArrayList();
+        aRv();
     }
 
     @Override // com.baidu.tieba.mainentrance.HotForumModel.a
     public void a(List<com.baidu.tieba.mainentrance.b> list, List<c> list2, HotSearchInfoData hotSearchInfoData, String str) {
-        this.eDH = true;
-        hideLoadingView(this.eDs);
+        this.ePb = true;
+        hideLoadingView(this.eOM);
         if (list2 == null) {
-            this.eDy = new ArrayList();
+            this.eOS = new ArrayList();
         } else {
-            this.eDy = list2;
+            this.eOS = list2;
         }
         if (!StringUtils.isNULL(str)) {
             this.mTopicInfoTitle = str;
@@ -802,7 +803,7 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         }
         a(hotSearchInfoData);
         this.mHotSearchInfo = hotSearchInfoData;
-        aMy();
+        aRv();
     }
 
     private void a(HotSearchInfoData hotSearchInfoData) {
@@ -813,8 +814,8 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         HotSearchInfoData hotSearchInfoData2 = new HotSearchInfoData();
         hotSearchInfoData2.setId(0L);
         hotSearchInfoData2.setName("");
-        hotSearchInfoData2.oM("");
-        hotSearchInfoData2.cn(0L);
+        hotSearchInfoData2.pA("");
+        hotSearchInfoData2.ct(0L);
         com.baidu.tbadk.core.sharedPref.b.getInstance().putString("hot_search_info", OrmObject.jsonStrWithObject(hotSearchInfoData2));
     }
 
@@ -827,42 +828,42 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         }
         this.mNavigationBar.onChangeSkinType(getPageContext(), i);
         getLayoutMode().setNightMode(i == 1);
-        getLayoutMode().u(this.eDr);
-        ak.e(this.eDr, i);
-        if (this.eDC != null) {
-            this.eDC.notifyDataSetChanged();
+        getLayoutMode().onModeChanged(this.eOL);
+        al.e(this.eOL, i);
+        if (this.eOW != null) {
+            this.eOW.notifyDataSetChanged();
         }
         if (i == 2) {
-            this.cLO.setHintTextColor(ak.getColor(d.C0126d.s_navbar_title_color));
+            this.cUU.setHintTextColor(al.getColor(d.C0141d.s_navbar_title_color));
         } else {
-            this.cLO.setHintTextColor(ak.getColor(d.C0126d.cp_cont_e));
+            this.cUU.setHintTextColor(al.getColor(d.C0141d.cp_cont_e));
         }
-        ak.c(this.cXb, d.f.del_search_btn);
-        ak.b(this.cLO, d.C0126d.cp_cont_b, d.C0126d.s_navbar_title_color);
-        ak.a(this.bwq, d.f.icon_seach_n, d.f.icon_seach_n, d.f.icon_seach_n, i);
-        ak.i(this.eDs, d.C0126d.cp_bg_line_d);
-        ak.c(this.eDu, d.C0126d.cp_link_tip_a, 1);
-        if (this.eDz != null) {
-            this.eDz.onChangeSkinType(i);
+        al.c(this.dgo, d.f.del_search_btn);
+        al.b(this.cUU, d.C0141d.cp_cont_b, d.C0141d.s_navbar_title_color);
+        al.a(this.bEt, d.f.icon_seach_n, d.f.icon_seach_n, d.f.icon_seach_n, i);
+        al.i(this.eOM, d.C0141d.cp_bg_line_d);
+        al.c(this.eOO, d.C0141d.cp_link_tip_a, 1);
+        if (this.eOT != null) {
+            this.eOT.onChangeSkinType(i);
         }
-        oL(i);
+        oX(i);
     }
 
-    private void oL(int i) {
-        if (this.eDA != null) {
-            this.eDA.setBackgroundColor(ak.getColor(d.C0126d.cp_bg_line_d));
+    private void oX(int i) {
+        if (this.eOU != null) {
+            this.eOU.setBackgroundColor(al.getColor(d.C0141d.cp_bg_line_d));
         }
-        if (this.eDL != null) {
-            getLayoutMode().u(this.eDL);
+        if (this.ePf != null) {
+            getLayoutMode().onModeChanged(this.ePf);
         }
-        if (this.eDM != null) {
-            ((TextView) this.eDM.findViewById(d.g.home_bt_search_footer)).setTextColor(ak.getColor(d.C0126d.cp_link_tip_a));
+        if (this.ePg != null) {
+            ((TextView) this.ePg.findViewById(d.g.home_bt_search_footer)).setTextColor(al.getColor(d.C0141d.cp_link_tip_a));
         }
-        if (this.eDN != null) {
-            for (View view2 : this.eDN) {
-                ak.c((TextView) view2.findViewById(d.g.home_lv_search_forum), d.C0126d.cp_cont_b, 1);
-                view2.findViewById(d.g.home_dialog_lv_search_forum_divider).setBackgroundColor(ak.getColor(d.C0126d.cp_bg_line_b));
-                ak.i(view2, d.f.addresslist_item_bg);
+        if (this.ePh != null) {
+            for (View view : this.ePh) {
+                al.c((TextView) view.findViewById(d.g.home_lv_search_forum), d.C0141d.cp_cont_b, 1);
+                view.findViewById(d.g.home_dialog_lv_search_forum_divider).setBackgroundColor(al.getColor(d.C0141d.cp_bg_line_b));
+                al.i(view, d.f.addresslist_item_bg);
             }
         }
     }
@@ -870,8 +871,8 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
     @Override // com.baidu.tbadk.BaseActivity, android.app.Activity, android.view.KeyEvent.Callback
     public boolean onKeyDown(int i, KeyEvent keyEvent) {
         if (i == 4) {
-            if (i == 4 && this.eDv.canGoBack()) {
-                this.eDv.goBack();
+            if (i == 4 && this.eOP.canGoBack()) {
+                this.eOP.goBack();
                 return true;
             }
             closeActivity();
@@ -915,64 +916,64 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         }
 
         @Override // android.view.View.OnClickListener
-        public void onClick(View view2) {
+        public void onClick(View view) {
             if (!TextUtils.isEmpty(this.mName)) {
-                SquareSearchActivity.this.cWR = this.mName;
-                TiebaStatic.log(new al("c12034"));
+                SquareSearchActivity.this.dge = this.mName;
+                TiebaStatic.log(new am("c12034"));
                 SquareSearchActivity.this.H(this.mName, true);
             }
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public boolean aMG() {
-        if (!j.gP()) {
-            aO(this.mNoDataView);
-            this.mNoDataView.setTextOption(NoDataViewFactory.d.dp(d.k.neterror));
+    public boolean aRD() {
+        if (!j.jD()) {
+            aR(this.mNoDataView);
+            this.mNoDataView.setTextOption(NoDataViewFactory.d.dr(d.k.neterror));
             return true;
         }
-        aP(this.mNoDataView);
+        aS(this.mNoDataView);
         return false;
     }
 
     /* JADX INFO: Access modifiers changed from: private */
     /* loaded from: classes3.dex */
     public class a extends BdAsyncTask<Object, Integer, ForumSuggestModel> {
-        private BasicNameValuePair eEd;
-        private x mNetwork = null;
+        private BasicNameValuePair ePx;
+        private y mNetwork = null;
         private String mUrl;
 
         public a(String str, BasicNameValuePair basicNameValuePair, boolean z) {
             this.mUrl = null;
-            this.eEd = null;
+            this.ePx = null;
             this.mUrl = str;
-            this.eEd = basicNameValuePair;
+            this.ePx = basicNameValuePair;
         }
 
         /* JADX INFO: Access modifiers changed from: protected */
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
         public void onPreExecute() {
-            if (!SquareSearchActivity.this.aMG()) {
-                SquareSearchActivity.this.aP(SquareSearchActivity.this.mNoDataView);
-                SquareSearchActivity.this.showLoadingView(SquareSearchActivity.this.eDs, true, SquareSearchActivity.this.getResources().getDimensionPixelSize(d.e.ds320));
-                SquareSearchActivity.this.eDt.setVisibility(8);
+            if (!SquareSearchActivity.this.aRD()) {
+                SquareSearchActivity.this.aS(SquareSearchActivity.this.mNoDataView);
+                SquareSearchActivity.this.showLoadingView(SquareSearchActivity.this.eOM, true, SquareSearchActivity.this.getResources().getDimensionPixelSize(d.e.ds320));
+                SquareSearchActivity.this.eON.setVisibility(8);
             }
         }
 
         /* JADX DEBUG: Method merged with bridge method */
         /* JADX INFO: Access modifiers changed from: protected */
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
-        /* renamed from: D */
+        /* renamed from: C */
         public ForumSuggestModel doInBackground(Object... objArr) {
             ForumSuggestModel forumSuggestModel = null;
-            if (j.gP()) {
+            if (j.jD()) {
                 try {
-                    this.mNetwork = new x(this.mUrl);
-                    this.mNetwork.a(this.eEd);
-                    String uK = this.mNetwork.uK();
-                    if (uK != null) {
-                        forumSuggestModel = ForumSuggestModel.parserJson(uK);
-                        SquareSearchActivity.this.eDG = this.eEd.getValue();
+                    this.mNetwork = new y(this.mUrl);
+                    this.mNetwork.a(this.ePx);
+                    String yl = this.mNetwork.yl();
+                    if (yl != null) {
+                        forumSuggestModel = ForumSuggestModel.parserJson(yl);
+                        SquareSearchActivity.this.ePa = this.ePx.getValue();
                         return forumSuggestModel;
                     }
                     return null;
@@ -989,30 +990,30 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
         /* renamed from: a */
         public void onPostExecute(ForumSuggestModel forumSuggestModel) {
-            SquareSearchActivity.this.hideLoadingView(SquareSearchActivity.this.eDs);
+            SquareSearchActivity.this.hideLoadingView(SquareSearchActivity.this.eOM);
             if (forumSuggestModel != null) {
-                SquareSearchActivity.this.aP(SquareSearchActivity.this.mNoDataView);
-                SquareSearchActivity.this.eDE = forumSuggestModel;
+                SquareSearchActivity.this.aS(SquareSearchActivity.this.mNoDataView);
+                SquareSearchActivity.this.eOY = forumSuggestModel;
                 SquareSearchActivity.this.refresh();
             } else {
-                SquareSearchActivity.this.aO(SquareSearchActivity.this.mNoDataView);
-                SquareSearchActivity.this.mNoDataView.setTextOption(NoDataViewFactory.d.dp(d.k.text_no_search_record));
+                SquareSearchActivity.this.aR(SquareSearchActivity.this.mNoDataView);
+                SquareSearchActivity.this.mNoDataView.setTextOption(NoDataViewFactory.d.dr(d.k.text_no_search_record));
             }
-            SquareSearchActivity.this.eDF = null;
+            SquareSearchActivity.this.eOZ = null;
         }
 
         @Override // com.baidu.adp.lib.asyncTask.BdAsyncTask
         public void cancel() {
             if (this.mNetwork != null) {
-                this.mNetwork.eW();
+                this.mNetwork.hN();
                 this.mNetwork = null;
             }
-            SquareSearchActivity.this.hideLoadingView(SquareSearchActivity.this.eDs);
+            SquareSearchActivity.this.hideLoadingView(SquareSearchActivity.this.eOM);
             super.cancel(true);
         }
     }
 
-    private void ig(boolean z) {
+    private void im(boolean z) {
         if (TbadkCoreApplication.isLogin()) {
             if (z) {
                 MessageManager.getInstance().dispatchResponsedMessage(new RequestEnterForumDataMessage(2001323, true));
@@ -1022,16 +1023,16 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aO(View view2) {
-        if (view2 != null) {
-            view2.setVisibility(0);
+    public void aR(View view) {
+        if (view != null) {
+            view.setVisibility(0);
         }
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void aP(View view2) {
-        if (view2 != null) {
-            view2.setVisibility(8);
+    public void aS(View view) {
+        if (view != null) {
+            view.setVisibility(8);
         }
     }
 
@@ -1042,33 +1043,33 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
 
     /* JADX INFO: Access modifiers changed from: private */
     public void H(final String str, boolean z) {
-        if (!j.gP()) {
+        if (!j.jD()) {
             showToast(d.k.neterror);
         } else if (!StringUtils.isNull(str)) {
             if (z) {
-                this.eDP = false;
-                this.cLO.setText(str);
-                this.cLO.setSelection(str.length());
-                this.eDP = true;
+                this.ePj = false;
+                this.cUU.setText(str);
+                this.cUU.setSelection(str.length());
+                this.ePj = true;
             }
-            l.b(getPageContext().getPageActivity(), this.cLO);
-            this.eDw.setVisibility(8);
-            this.eDB.setVisibility(8);
-            this.eDv.setVisibility(0);
+            l.b(getPageContext().getPageActivity(), this.cUU);
+            this.eOQ.setVisibility(8);
+            this.eOV.setVisibility(8);
+            this.eOP.setVisibility(0);
             showProgressBarWithOffset(0, 0);
             String str2 = TbConfig.SQUARE_SEARCH_PAGE + str;
             try {
-                str2 = TbConfig.SQUARE_SEARCH_PAGE + URLEncoder.encode(str, "utf-8");
+                str2 = TbConfig.SQUARE_SEARCH_PAGE + URLEncoder.encode(str, IoUtils.UTF_8);
             } catch (UnsupportedEncodingException e) {
                 e.printStackTrace();
             }
-            this.eDv.loadUrl(str2);
-            v.a(new u<Boolean>() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.20
+            this.eOP.loadUrl(str2);
+            w.a(new v<Boolean>() { // from class: com.baidu.tieba.mainentrance.SquareSearchActivity.20
                 /* JADX DEBUG: Method merged with bridge method */
                 /* JADX WARN: Can't rename method to resolve collision */
-                @Override // com.baidu.tbadk.util.u
+                @Override // com.baidu.tbadk.util.v
                 public Boolean doInBackground() {
-                    com.baidu.tieba.tbadkCore.util.a.ta(str);
+                    com.baidu.tieba.tbadkCore.util.a.tU(str);
                     return true;
                 }
             }, null);
@@ -1076,11 +1077,11 @@ public class SquareSearchActivity extends BaseActivity<SquareSearchActivity> imp
     }
 
     /* JADX INFO: Access modifiers changed from: private */
-    public void oN(String str) {
-        if (!j.gP()) {
+    public void pB(String str) {
+        if (!j.jD()) {
             showToast(d.k.neterror);
         } else if (!StringUtils.isNull(str)) {
-            this.eDQ = str;
+            this.ePk = str;
             if (TextUtils.isEmpty(TbadkCoreApplication.getCurrentAccount())) {
                 TbadkCoreApplication.getInst().login(getPageContext(), new CustomMessage<>(2002001, new LoginActivityConfig((Context) getPageContext().getPageActivity(), getPageContext().getString(d.k.login_to_use), true, (int) IEventCenterService.EventId.EventMode.SAPIWEBVIEW_BIND_WIDGET)));
             } else {
